# laboratory_work_19

./: CMakeLists.txt  actual_output1.txt  actual_output2.txt  expected_output1.txt  expression.txt  input.txt  input1.txt  input_4.txt  output.txt  output1.txt  task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_functions_3.c  test_function_4.c  test_function_5.c  test_function_6.c  test_function_7.c  test_functions.c  test_functions_2.c  test_input1.txt  test_input2.txt
working_with_files/: file_.c  file_.h
