cmake_minimum_required(VERSION 3.26)
project(untitled26 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled26 task_1.c
        working_with_files/file_.c
        test_functions.c
        task_2.c
        test_functions_2.c
        task_3.c
        task_functions_3.c
        task_4.c
        test_function_4.c
        task_5.c
        test_function_5.c
        task_6.c
        test_function_6.c)
